Fix unit test to use appropriate process invocation methodology